--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ python-dateutil==1.5
 python3-openid==3.1.0
 pytz==2019.2
 requests==2.22.0
-requests-oauthlib==1.2.0
+requests-oauthlib==1.2.
 six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
