Added dropbox for file upload

--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,9 @@ defusedxml = "==0.6.0"
 django-allauth = "==0.40.0"
 django-filter = "==2.2.0"
 django-rest-auth = "==0.9.5"
+django-storages = "==1.7.2"
 djangorestframework = "==3.10.3"
+dropbox = "==9.4.0"
 gunicorn = "==19.9.0"
 heroku = "==0.1.4"
 idna = "==2.8"
