--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ Django==2.2.6
 django-allauth==0.40.0
 django-filter==2.2.0
 django-rest-auth==0.9.5
+django-storages==1.7.2
 djangorestframework==3.10.3
+dropbox==9.4.0
 gunicorn==19.9.0
 heroku==0.1.4
 idna==2.8
