--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+boto3==1.9.242
+botocore==1.12.242
 certifi==2019.6.16
 chardet==3.0.4
 defusedxml==0.6.0
@@ -7,18 +9,20 @@ django-filter==2.2.0
 django-rest-auth==0.9.5
 django-storages==1.7.2
 djangorestframework==3.10.3
-dropbox==9.4.0
+docutils==0.15.2
 gunicorn==19.9.0
 heroku==0.1.4
 idna==2.8
+jmespath==0.9.4
 oauthlib==3.1.0
 Pillow==6.2.0
 psycopg2==2.8.3
-python-dateutil==1.5
+python-dateutil==2.8.0
 python3-openid==3.1.0
 pytz==2019.2
 requests==2.22.0
 requests-oauthlib==1.2.0
+s3transfer==0.2.1
 six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
